inclusao de uma imagem com tamanho descente

--- a/TESTE.css
+++ b/TESTE.css
@@ -1,4 +1,4 @@
 body {
-    background-image: url("https://i.pinimg.com/736x/1f/f3/54/1ff354adb81d12d0cf22fb9fc5a46685.jpg");
-            
+    background-image: url("https://i.pinimg.com/736x/95/8a/43/958a43d2f8d5607da0f9f54aaf518ef4.jpg");
+    background-size: cover;            
 }
